# AgentLearning

./: .env.example  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
demo/: README.md  demo01_llm_api.py  demo02_tool_calling.py  demo03_rag_basics.py  demo04_agent_workflow.py  demo05_engineering_backend.py
docs/: 2. Tool Calling.md  3. RAG 基础.md  5. 工程后端化.md
docs/demo/: 1. LLM API 调用.md  2. Tool Calling.md  3. RAG 基础.md  4. Agent 工作流.md  6. 项目表达.md
docs/problems/Agent 工作流/: Agent Loop.md  编排与状态管理.md
docs/problems/RAG/: RAG 评估与幻觉控制.md  RAG 高频基础.md  检索、召回与排序.md
docs/problems/工具调用/: MCP 高频与新问题.md  工具调用基础.md
week01-llm-basics/: ENV_SETUP.md  README.md
week01-llm-basics/day01_02_llm_basics/: llm_basics.py
week01-llm-basics/day03_04_async_prompt/: async_pydantic_demo.py  prompt_templates.py
week01-llm-basics/day05_07_react_agent/: react_agent.py
week01-llm-basics/tests/: tests.py
week02-rag-system/: README.md
week02-rag-system/day01_02_basic_rag/: __init__.py  basic_rag_pipeline.py
week02-rag-system/day03_04_advanced_rag/: advanced_rag_strategies.py
week02-rag-system/day05_07_observability/: observability_evaluation.py
week02-rag-system/sample_docs/: git_guide.txt  python_guide.txt  venv_guide.txt
week02-rag-system/tests/: __init__.py  tests.py
week03-langchain-langgraph/: README.md
week03-langchain-langgraph/day01_03_langchain_basics/: __init__.py  langchain_basics.py
week03-langchain-langgraph/day04_07_langgraph/: langgraph_practice.py
week03-langchain-langgraph/tests/: __init__.py  tests.py
week04-multi-agent/: README.md
week04-multi-agent/day01_03_crewai/: crewai_demo.py
week04-multi-agent/day04_05_multi_agent_comparison/: multi_agent_comparison.py
week04-multi-agent/tests/: tests.py
week05-production/: README.md
week05-production/day01_02_fastapi_service/: fastapi_service.py
week05-production/day03_04_litellm_gateway/: litellm_gateway.py
week05-production/day05_07_robustness_debugging/: robustness_debugging.py
week05-production/tests/: tests.py
