[project]
name = "agentlearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langfuse>=4.6.1",
    "langgraph>=1.2.0",
    "litellm>=1.83.14",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]
